--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.Im
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jackson.deserialization.adjust-dates-to-context-time-zone=false
 spring.jackson.time-zone=Asia/Seoul
+mybatis.mapper-locations=mappers/*Mapper.xml
+
